Add nabeatsu with Java FFM API